# tika-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  documentation.yml
docs/source/: conf.py  index.md
