[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "tika"
description = "Apache Tika Python library"
readme = "README.md"
keywords = [ "tika", "digital", "babel fish", "apache" ]
license = "Apache-2.0"
authors = [ { name = "Chris Mattmann", email = "chris.a.mattmann@jpl.nasa.gov" } ]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Topic :: Database :: Front-Ends",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [ "version" ]
dependencies = [
  "beautifulsoup4==4.13.3",
  "requests",
]

[project.optional-dependencies]
all = [
  "tika[tests]",
]
tests = [
  "memory-profiler>=0.57",
  "pytest-benchmark>=3.2.2",
  "pytest-cov<2.6",
  "python-coveralls",
  "pyyaml==5.4.1",
]

[project.urls]
homepage = "http://github.com/chrismattmann/tika-python"
repository = "http://github.com/chrismattmann/tika-python.git"

[project.scripts]
tika-python = "tika.tika:main"

[tool.setuptools]
packages.find.include = [
  "tika*",
]
packages.find.exclude = [ "tika.tests*" ]
